<resources>

    <string name="app_name">ProyectoAppDepaHouse</string>

    <string name="name_logo">DepaHouse</string>

    <!--    Texto del Login-->
    <string name="txt_user_login">Correo electrónico</string>
    <string name="txt_password_login">Contraseña</string>
    <string name="txt_recordarme">Recordarme</string>
    <string name="txt_recuperarPassword">¿Olvidaste tu contraseña?</string>
    <string name="txt_iniciarSesion">Iniciar Sesión</string>
    <string name="txt_google">Google</string>
    <string name="txt_noestasRegistrado">¿No estas Registrado? </string>
    <string name="txt_noestasRegistrado_Registrate">REGÍSTRATE</string>

    <!--    texto del registro-->
    <string name="txt_nameuser_register">Nombre de usuario</string>
    <string name="txt_email_register">Correo electrónico</string>
    <string name="txt_password_register">Contraseña</string>
    <string name="txt_confirm_password">Confirmar contraseña</string>
    <string name="txt_sign_up">Registrar</string>
    <string name="txt_button_google">Google</string>
    <string name="txt_isRegistered">¿Ya esta registrado?</string>
    <string name="txt_isRegistered_login">INICIAR SESIÓN</string>

    <!--    Mensaje de Confirmacion-->
    <string name="txt_alert_successfulRecord">Registro Exitoso Aceptar</string>

    <!--    Pantalla principal-->
    <string name="txt_welcome_user">Bienvenido </string>
    <string name="txt_search_here">Buscar Aqui</string>
    <string name="txt_category_1">Categoria 1</string>
    <string name="txt_category_2">Categoria 2</string>
    <string name="txt_category_3">Categoria 3</string>
    <string name="txt_more_properties">Mas Propiedades</string>
    <string name="txt_image">Imagen</string>
    <string name="txt_price">Precio</string>
    <string name="txt_description">Descripcion</string>

    <!--    lista de departamentos-->
    <string name="txt_all_properties">Todas las propiedades</string>
    <string name="txt_list_of_images">Lista de imagenes</string>

    <!--    Texto Detalles-->
    <string name="txt_detail">Detalles</string>
    <string name="txt_Image">Imagen</string>
    <string name="txt_buy">Comprar</string>
    <string name="txt_type_department">Dpto. 2 habitaciones</string>
    <string name="txt_place">San isidro, Lima</string>
    <string name="txt_Price">Precio</string>
    <string name="txt_account">S/. 300000.00</string>
    <string name="txt_specifications">Especificaciones</string>
    <string name="txt_room_bathroom_swimming_pool">habitacion baño piscina</string>
    <string name="txt_Location">Ubicacion</string>
    <string name="txt_map">Mapa</string>

    <string name="txt_title_recovery">Recuperar cuenta</string>
    <string name="txt_description_recovery">Te ayudaremos a restablecer tu contraseña. Primero ingresa tu correo electrónico.</string>
    <string name="txt_sendemail_recovery">Enviar</string>
    <string name="txt_back">Regresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_estate_hint">Nombre inmuebles</string>
    <string name="price_hint">Precio</string>
    <string name="city_hint">Ciudad</string>
    <string name="disctric_hint">Distrito</string>
    <string name="location_hint">ubicación</string>
    <string name="select_image_button">Seleccionar imagen</string>

    <!--    Texto Agregar-->
    <string name="hint_description">Description</string>
    <string name="hint_type">Tipo</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_district">Distrito</string>
    <string name="hint_bedrooms">Habitaciones</string>
    <string name="hint_floors">Pisos</string>
    <string name="hint_hall">Sala</string>
    <string name="hint_bathroom">Baño</string>
    <string name="hint_dimension">Dimensión</string>
    <string name="hint_kitchen">Cocina</string>
    <string name="hint_pool">Piscina</string>
    <string name="hint_latitude">Latitud</string>
    <string name="hint_length">Longitud</string>
    <string name="hint_price">Precio</string>
    <string name="txt_add">Guardar</string>
    <string name="txt_btnUpdate">Actualizar</string>
    <string name="txt_btn_selectimg">Seleccionar Imagen</string>
    <string name="search">Name app</string>
    <string name="txt_title_editar">Editar Inmueble</string>

    <string-array name="types">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Terreno</item>
    </string-array>

</resources>